--- a/org.kevoree.modeling.java2typescript/pom.xml
+++ b/org.kevoree.modeling.java2typescript/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>org.kevoree.modeling.dsl</artifactId>
             <version>4.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
