--- a/org.kevoree.modeling.java2typescript/pom.xml
+++ b/org.kevoree.modeling.java2typescript/pom.xml
@@ -42,9 +42,9 @@
         </dependency>
         -->
         <dependency>
-            <groupId>org.kevoree.modeling</groupId>
-            <artifactId>org.kevoree.modeling.dsl</artifactId>
-            <version>4.0.0-SNAPSHOT</version>
+            <groupId>org.kevoree.modeling.idea</groupId>
+            <artifactId>org.kevoree.modeling.idea.dsl</artifactId>
+            <version>10</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -52,7 +52,6 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
 </project>
