--- a/org.kevoree.modeling.java2typescript/pom.xml
+++ b/org.kevoree.modeling.java2typescript/pom.xml
@@ -6,45 +6,19 @@
 
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.java2typescript</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <artifactId>org.kevoree.modeling.root</artifactId>
+        <groupId>org.kevoree.modeling</groupId>
+        <version>4.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <dependencies>
-        <!--
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
-        <dependency>
-            <groupId>org.picocontainer</groupId>
-            <artifactId>picocontainer</artifactId>
-            <version>2.15</version>
-        </dependency>
-        <dependency>
-            <groupId>net.sf.trove4j</groupId>
-            <artifactId>trove4j</artifactId>
-            <version>2.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jdom</groupId>
-            <artifactId>jdom</artifactId>
-            <version>1.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jetbrains</groupId>
-            <artifactId>com.jetbrains.asm4</artifactId>
-            <version>1</version>
-        </dependency>
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>3.5.1</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>org.kevoree.modeling.idea</groupId>
             <artifactId>org.kevoree.modeling.idea.dsl</artifactId>
-            <version>10</version>
+            <version>${kmf.plugin.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
