--- a/databases/org.kevoree.modeling.microframework.databases.redis/pom.xml
+++ b/databases/org.kevoree.modeling.microframework.databases.redis/pom.xml
@@ -23,6 +23,22 @@
             <artifactId>jedis</artifactId>
             <version>2.6.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>redis.embedded</groupId>
+            <artifactId>embedded-redis</artifactId>
+            <version>0.3</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+
+    <repositories>
+        <repository>
+            <id>clojars.org</id>
+            <url>http://clojars.org/repo</url>
+        </repository>
+    </repositories>
 
 </project>
