add rocksdb support

--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,11 @@
 
         <!-- DataStores -->
         <module>databases/org.kevoree.modeling.microframework.databases.leveldb</module>
+        <module>databases/org.kevoree.modeling.microframework.databases.rocksdb</module>
         <module>databases/org.kevoree.modeling.microframework.databases.redis</module>
         <module>databases/org.kevoree.modeling.microframework.databases.mongodb</module>
         <module>databases/org.kevoree.modeling.microframework.databases.websocket</module>
+        <!-- End DataStores -->
 
     </modules>
 
