--- a/test/org.kevoree.modeling.test.cloud/pom.xml
+++ b/test/org.kevoree.modeling.test.cloud/pom.xml
@@ -31,10 +31,13 @@
                         <configuration>
                             <metaModelFile>metamodel/Cloud.mm</metaModelFile>
                             <metaModelQualifiedName>cloud.Cloud</metaModelQualifiedName>
+                            <js>true</js>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
+<!--
+    -->
 </project>
