--- a/org.kevoree.modeling.generator.mavenplugin/pom.xml
+++ b/org.kevoree.modeling.generator.mavenplugin/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.kevoree.modeling</groupId>
             <artifactId>org.kevoree.modeling.java2typescript</artifactId>
-            <version>1-SNAPSHOT</version>
+            <version>${java2typescript.plugin.version}</version>
         </dependency>
     </dependencies>
 
@@ -80,7 +80,7 @@
                                 <artifactItem>
                                     <groupId>org.kevoree.modeling</groupId>
                                     <artifactId>org.kevoree.modeling.microframework.typescript</artifactId>
-                                    <version>4.0.0-SNAPSHOT</version>
+                                    <version>${project.version}</version>
                                     <type>zip</type>
                                     <outputDirectory>${project.build.directory}/classes</outputDirectory>
                                     <includes>**/*.js,**/*.ts</includes>
