WebSocket Brokers implems (java + TS)

--- a/databases/org.kevoree.modeling.microframework.databases.websocket/pom.xml
+++ b/databases/org.kevoree.modeling.microframework.databases.websocket/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>minimal-json</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
