--- a/test/pom.xml
+++ b/test/pom.xml
@@ -1,9 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.kevoree.modeling.test</groupId>
+
+    <parent>
+        <groupId>org.kevoree.modeling</groupId>
+        <artifactId>org.kevoree.modeling.root</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
     <artifactId>org.kevoree.modeling.test.root</artifactId>
     <packaging>pom</packaging>
-    <version>4.0.0-SNAPSHOT</version>
     <name>Kevoree :: Modeling :: Test :: Root</name>
     <url>https://github.com/dukeboard/kevoree-modeling-framework</url>
     <description>Kevoree Modeling Framework Test</description>
@@ -54,7 +60,8 @@
         <module>org.kevoree.modeling.test.fsm</module>
         <module>org.kevoree.modeling.test.cloud</module>
         <module>org.kevoree.modeling.test.opposite</module>
-	</modules>
+        <module>org.kevoree.modeling.test.datastore</module>
+    </modules>
 
     <dependencies>
         <dependency>
