--- a/test/org.kevoree.modeling.test.datastore/pom.xml
+++ b/test/org.kevoree.modeling.test.datastore/pom.xml
@@ -5,18 +5,19 @@
     <parent>
         <artifactId>org.kevoree.modeling.test.root</artifactId>
         <groupId>org.kevoree.modeling.test</groupId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>org.kevoree.modeling.test.datastore</artifactId>
-
+    <name>Kevoree :: Modeling :: Test :: DataStore</name>
 
     <dependencies>
         <dependency>
             <groupId>org.kevoree.modeling</groupId>
             <artifactId>org.kevoree.modeling.microframework.databases.websocket</artifactId>
-            <version>4.0.1-SNAPSHOT</version>
+            <version>${kmf.version}</version>
         </dependency>
     </dependencies>
 
@@ -26,7 +27,7 @@
             <plugin>
                 <groupId>org.kevoree.modeling</groupId>
                 <artifactId>org.kevoree.modeling.generator.mavenplugin</artifactId>
-                <version>4.0.1-SNAPSHOT</version>
+                <version>${kmf.version}</version>
                 <executions>
                     <execution>
                         <id>ModelGen</id>
