--- a/test/org.kevoree.modeling.test.opposite/pom.xml
+++ b/test/org.kevoree.modeling.test.opposite/pom.xml
@@ -6,13 +6,12 @@
     <parent>
         <groupId>org.kevoree.modeling.test</groupId>
         <artifactId>org.kevoree.modeling.test.root</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>org.kevoree.modeling.test.opposite</artifactId>
     <packaging>jar</packaging>
     <name>Kevoree :: Modeling :: Test :: Opposite</name>
-
 
     <build>
         <sourceDirectory>target/generated-sources/kmf</sourceDirectory>
@@ -20,7 +19,7 @@
             <plugin>
                 <groupId>org.kevoree.modeling</groupId>
                 <artifactId>org.kevoree.modeling.generator.mavenplugin</artifactId>
-                <version>4.0.0-SNAPSHOT</version>
+                <version>${kmf.version}</version>
                 <executions>
                     <execution>
                         <id>ModelGen</id>
