--- a/test/pom.xml
+++ b/test/pom.xml
@@ -1,14 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.kevoree.modeling</groupId>
-        <artifactId>org.kevoree.modeling.root</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-
     <artifactId>org.kevoree.modeling.test.root</artifactId>
+    <groupId>org.kevoree.modeling.test</groupId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Kevoree :: Modeling :: Test :: Root</name>
     <url>https://github.com/dukeboard/kevoree-modeling-framework</url>
@@ -23,6 +19,9 @@
         </license>
     </licenses>
 
+    <properties>
+        <kmf.version>4.0.1-SNAPSHOT</kmf.version>
+    </properties>
 
     <developers>
         <developer>
@@ -67,7 +66,7 @@
         <dependency>
             <groupId>org.kevoree.modeling</groupId>
             <artifactId>org.kevoree.modeling.microframework</artifactId>
-            <version>${project.version}</version>
+            <version>${kmf.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -76,7 +75,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
