--- a/test/pom.xml
+++ b/test/pom.xml
@@ -20,7 +20,7 @@
     </licenses>
 
     <properties>
-        <kmf.version>4.0.1</kmf.version>
+        <kmf.version>4.0.2-SNAPSHOT</kmf.version>
     </properties>
 
     <developers>
