--- a/test/org.kevoree.modeling.test.cloud/pom.xml
+++ b/test/org.kevoree.modeling.test.cloud/pom.xml
@@ -14,6 +14,14 @@
     <packaging>jar</packaging>
     <name>Kevoree :: Modeling :: Test :: Cloud</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.kevoree.modeling</groupId>
+            <artifactId>org.kevoree.modeling.microframework</artifactId>
+            <version>${kmf.version}</version>
+        </dependency>
+    </dependencies>
+
 
     <build>
         <sourceDirectory>target/generated-sources/kmf</sourceDirectory>
