--- a/org.kevoree.modeling.microframework.typescript/package.json
+++ b/org.kevoree.modeling.microframework.typescript/package.json
@@ -5,6 +5,6 @@
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1.13",
     "grunt-typescript": "~0.2.4",
-    "typescript": "~1.1.0-1"
+    "typescript": "~1.3.0"
   }
 }
